--- a/ui/main_window.ui
+++ b/ui/main_window.ui
@@ -10,16 +10,34 @@
     <height>713</height>
    </rect>
   </property>
+  <property name="baseSize">
+   <size>
+    <width>0</width>
+    <height>0</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>PyPredict</string>
   </property>
   <widget class="QWidget" name="centralwidget">
+   <property name="baseSize">
+    <size>
+     <width>0</width>
+     <height>0</height>
+    </size>
+   </property>
    <layout class="QVBoxLayout" name="verticalLayout_2">
     <property name="spacing">
-     <number>6</number>
+     <number>0</number>
+    </property>
+    <property name="leftMargin">
+     <number>5</number>
     </property>
     <property name="topMargin">
-     <number>6</number>
+     <number>2</number>
+    </property>
+    <property name="rightMargin">
+     <number>0</number>
     </property>
     <property name="bottomMargin">
      <number>0</number>
@@ -37,7 +55,7 @@
       </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
-        <string>Tab 1</string>
+        <string>World Map</string>
        </attribute>
        <layout class="QVBoxLayout" name="verticalLayout_4">
         <property name="spacing">
@@ -80,10 +98,10 @@
             <number>6</number>
            </property>
            <property name="topMargin">
-            <number>3</number>
+            <number>2</number>
            </property>
            <property name="rightMargin">
-            <number>3</number>
+            <number>0</number>
            </property>
            <property name="bottomMargin">
             <number>0</number>
@@ -186,9 +204,15 @@
             <height>16777215</height>
            </size>
           </property>
+          <property name="lineWidth">
+           <number>1</number>
+          </property>
           <layout class="QVBoxLayout" name="verticalLayout">
            <property name="spacing">
             <number>0</number>
+           </property>
+           <property name="sizeConstraint">
+            <enum>QLayout::SetMaximumSize</enum>
            </property>
            <property name="leftMargin">
             <number>0</number>
@@ -209,9 +233,12 @@
       </widget>
       <widget class="QWidget" name="tab_2">
        <attribute name="title">
-        <string>Tab 2</string>
+        <string>Table</string>
        </attribute>
        <layout class="QVBoxLayout" name="verticalLayout_5">
+        <property name="spacing">
+         <number>0</number>
+        </property>
         <property name="leftMargin">
          <number>0</number>
         </property>
@@ -232,11 +259,11 @@
           <property name="columnCount">
            <number>13</number>
           </property>
-          <attribute name="horizontalHeaderDefaultSectionSize">
-           <number>88</number>
-          </attribute>
           <attribute name="horizontalHeaderMinimumSectionSize">
            <number>20</number>
+          </attribute>
+          <attribute name="horizontalHeaderDefaultSectionSize">
+           <number>88</number>
           </attribute>
           <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
            <bool>true</bool>
@@ -374,7 +401,11 @@
    <addaction name="menuView"/>
    <addaction name="menuHelp"/>
   </widget>
-  <widget class="QStatusBar" name="statusbar"/>
+  <widget class="QStatusBar" name="statusbar">
+   <property name="sizeGripEnabled">
+    <bool>true</bool>
+   </property>
+  </widget>
   <action name="actionExit">
    <property name="text">
     <string>&amp;Exit</string>
