--- a/ui/main_window.ui
+++ b/ui/main_window.ui
@@ -361,7 +361,8 @@
      <string>Fi&amp;le</string>
     </property>
     <addaction name="actionOpen"/>
-    <addaction name="actionSave_as"/>
+    <addaction name="actionSave_picture"/>
+    <addaction name="actionSave_TLEs"/>
     <addaction name="actionExit"/>
    </widget>
    <widget class="QMenu" name="menuHelp">
@@ -421,9 +422,9 @@
     <string>&amp;Open</string>
    </property>
   </action>
-  <action name="actionSave_as">
+  <action name="actionSave_picture">
    <property name="text">
-    <string>&amp;Save as</string>
+    <string>&amp;Save picture</string>
    </property>
   </action>
   <action name="actionUpdate_TLE_from_net">
@@ -469,6 +470,11 @@
   <action name="actionMars">
    <property name="text">
     <string>&amp;Mars</string>
+   </property>
+  </action>
+  <action name="actionSave_TLEs">
+   <property name="text">
+    <string>Save &amp;TLEs</string>
    </property>
   </action>
  </widget>
