--- a/pypredict/ui/main_window.ui
+++ b/pypredict/ui/main_window.ui
@@ -120,6 +120,20 @@
             </widget>
            </item>
            <item>
+            <widget class="QToolButton" name="cov_button">
+             <property name="text">
+              <string>⬭</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QToolButton" name="sat_button">
+             <property name="text">
+              <string>🛰</string>
+             </property>
+            </widget>
+           </item>
+           <item>
             <widget class="QPushButton" name="dpl_button">
              <property name="font">
               <font>
